--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,5 @@
 {
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/universal:2",
-
 	"features": {
-		"ghcr.io/devcontainers/features/desktop-lite:1.2.6": {}
-	},
-	"forwardPorts": [6080],
-	"portsAttributes": {
-		"6080": {
-			"label": "desktop"
-		}
+	  "./test-feature": {}
 	}
 }
