--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,5 @@
 {
-	"build": {
-		"dockerfile": "Dockerfile"
-	},
 	"features": {
-		"ghcr.io/devcontainers/features/desktop-lite:1": {}
+		"./google-chrome": {}
 	}
 }
