--- a/.devcontainer/google-chrome/devcontainer-feature.json
+++ b/.devcontainer/google-chrome/devcontainer-feature.json
@@ -2,7 +2,7 @@
     "id": "google-chrome",
     "version": "1",
     "name": "Google Chrome",
-    "installsAfter": [
-        "ghcr.io/devcontainers/features/desktop-lite:1"
-    ]
+    "dependsOn": {
+        "ghcr.io/devcontainers/features/desktop-lite:1": {}
+    }
 }
