--- a/.devcontainer/google-chrome/devcontainer-feature.json
+++ b/.devcontainer/google-chrome/devcontainer-feature.json
@@ -2,6 +2,7 @@
     "id": "google-chrome",
     "version": "1",
     "name": "Google Chrome",
+    "documentationURL": "https://github.com/cschot/devcontainer-features/tree/main/src/google-chrome",
     "dependsOn": {
         "ghcr.io/devcontainers/features/desktop-lite:1": {}
     }
