--- a/.devcontainer/src/google-chrome/devcontainer-feature.json
+++ b/.devcontainer/src/google-chrome/devcontainer-feature.json
@@ -5,7 +5,7 @@
     "description": "Install Google Chrome and use it by VNC",
     "documentationURL": "https://github.com/cschot/devcontainer-features/tree/main/src/google-chrome",
     "dependsOn": {
-        //"ghcr.io/devcontainers/features/desktop-lite:1": {}
+        "ghcr.io/devcontainers/features/desktop-lite:1": {}
     },
     "options": {
         "channel": {
@@ -24,42 +24,6 @@
             "type": "string",
             "default": "",
             "description": "Select the Google Chrome version to install. Leave empty to install the latest version from the chosen channel."
-        },
-        // desktop-lite options:
-        "noVncVersion": {
-            "type": "string",
-            "proposals": [
-                "1.2.0"
-            ],
-            "default": "1.2.0",
-            "description": "The noVNC version to use"
-        },
-        "password": {
-            "type": "string",
-            "proposals": [
-                "vscode",
-                "codespaces",
-                "password",
-                "noPassword"
-            ],
-            "default": "vscode",
-            "description": "Enter a password for desktop connections. If \"noPassword\", connections from the local host can be established without entering a password"
-        },
-        "webPort": {
-            "type": "string",
-            "proposals": [
-                "6080"
-            ],
-            "default": "6080",
-            "description": "Enter a port for the VNC web client (noVNC)"
-        },
-        "vncPort": {
-            "type": "string",
-            "proposals": [
-                "5901"
-            ],
-            "default": "5901",
-            "description": "Enter a port for the desktop VNC server (TigerVNC)"
         }
     }
 }
